Fused motion edit context

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,14 @@ INCLUDE_DIRECTORIES(${_MAYA_LOCATION}/${MAYA_INC_SUFFIX} ${OPENGL_INCLUDE_DIRS} 
 
 LINK_DIRECTORIES(${_MAYA_LOCATION}/${MAYA_LIB_SUFFIX})
 
+SET(FUSED_MOTION_EDIT_CONTEXT_FILES
+    "src/fusedMotionEditContext/fusedMotionEditContext.hpp"
+    "src/fusedMotionEditContext/fusedMotionEditContext.cpp"
+    "src/fusedMotionEditContext/fusedMotionEditContextCommand.hpp"
+    "src/fusedMotionEditContext/fusedMotionEditContextCommand.cpp"
+    "src/fusedMotionEditContext/fusedMotionEditorMain.cpp"
+)
+
 SET(MARKER_CALIBRATION_CONTEXT_FILES
     "src/markerCalibrationContext/markerCalibrationContext.hpp"
     "src/markerCalibrationContext/markerCalibrationContext.cpp"
@@ -54,21 +62,37 @@ SET(MARKER_CALIBRATION_CONTEXT_FILES
     "src/markerCalibrationContext/markerCalibratorMain.cpp"
 )
 
+SET(_PROJECT_FUSED_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-fusedMotionEditContext)
 SET(_PROJECT_MARKER_CALIBRATION_CONTEXT ${PROJECT_NAME}-markerCalibrationContext)
+
+ADD_LIBRARY(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} SHARED ${FUSED_MOTION_EDIT_CONTEXT_FILES})
+TARGET_LINK_LIBRARIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} ${LIBRARIES} nlopt)
 
 ADD_LIBRARY(${_PROJECT_MARKER_CALIBRATION_CONTEXT} SHARED ${MARKER_CALIBRATION_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} ${LIBRARIES})
+
+SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
+SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_FUSED_MOTION_EDIT_CONTEXT})
+SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_MARKER_CALIBRATION_CONTEXT})
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
 IF(WIN32)
+    SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
+    SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
+
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 ELSEIF(APPLE)
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".bundle")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
 ELSE() # Linux
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
 ENDIF()
