Smooth motion edit context

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,14 +62,28 @@ SET(MARKER_CALIBRATION_CONTEXT_FILES
     "src/markerCalibrationContext/markerCalibratorMain.cpp"
 )
 
+SET(SMOOTH_MOTION_EDIT_CONTEXT_FILES
+    ${BSPLINE}
+    "src/smoothMotionEditContext/smoothMotionEditContext.hpp"
+    "src/smoothMotionEditContext/smoothMotionEditContext.cpp"
+    "src/smoothMotionEditContext/smoothMotionEditContextCommand.hpp"
+    "src/smoothMotionEditContext/smoothMotionEditContextCommand.cpp"
+    "src/smoothMotionEditContext/smoothMotionEditorMain.cpp"
+)
+
 SET(_PROJECT_FUSED_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-fusedMotionEditContext)
 SET(_PROJECT_MARKER_CALIBRATION_CONTEXT ${PROJECT_NAME}-markerCalibrationContext)
+SET(_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-smoothMotionEditContext)
 
 ADD_LIBRARY(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} SHARED ${FUSED_MOTION_EDIT_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} ${LIBRARIES} nlopt)
 
 ADD_LIBRARY(${_PROJECT_MARKER_CALIBRATION_CONTEXT} SHARED ${MARKER_CALIBRATION_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} ${LIBRARIES})
+
+ADD_LIBRARY(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} SHARED ${SMOOTH_MOTION_EDIT_CONTEXT_FILES})
+TARGET_LINK_LIBRARIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} ${LIBRARIES})
+TARGET_INCLUDE_DIRECTORIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${BSPLINE_LIB})
 
 SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
 SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_FUSED_MOTION_EDIT_CONTEXT})
@@ -79,20 +93,32 @@ SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES COMPILE_
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_MARKER_CALIBRATION_CONTEXT})
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
+SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
+SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT})
+SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+
 IF(WIN32)
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
+    SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 ELSEIF(APPLE)
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".bundle")
 
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
 ELSE() # Linux
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
 
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
 ENDIF()
