--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,14 @@ INCLUDE_DIRECTORIES(${_MAYA_LOCATION}/${MAYA_INC_SUFFIX} ${OPENGL_INCLUDE_DIRS} 
 
 LINK_DIRECTORIES(${_MAYA_LOCATION}/${MAYA_LIB_SUFFIX})
 
+SET(CONTACT_RAYTRACE_CONTEXT_FILES
+    "src/contactRaytraceContext/contactRaytraceContext.hpp"
+    "src/contactRaytraceContext/contactRaytraceContext.cpp"
+    "src/contactRaytraceContext/contactRaytraceContextCommand.hpp"
+    "src/contactRaytraceContext/contactRaytraceContextCommand.cpp"
+    "src/contactRaytraceContext/contactRaytracerMain.cpp"
+)
+
 SET(FUSED_MOTION_EDIT_CONTEXT_FILES
     "src/fusedMotionEditContext/fusedMotionEditContext.hpp"
     "src/fusedMotionEditContext/fusedMotionEditContext.cpp"
@@ -71,9 +79,13 @@ SET(SMOOTH_MOTION_EDIT_CONTEXT_FILES
     "src/smoothMotionEditContext/smoothMotionEditorMain.cpp"
 )
 
+SET(_PROJECT_CONTACT_RAYTRACE_CONTEXT ${PROJECT_NAME}-contactRaytraceContext)
 SET(_PROJECT_FUSED_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-fusedMotionEditContext)
 SET(_PROJECT_MARKER_CALIBRATION_CONTEXT ${PROJECT_NAME}-markerCalibrationContext)
 SET(_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-smoothMotionEditContext)
+
+ADD_LIBRARY(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} SHARED ${CONTACT_RAYTRACE_CONTEXT_FILES})
+TARGET_LINK_LIBRARIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} ${LIBRARIES} geometry-central)
 
 ADD_LIBRARY(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} SHARED ${FUSED_MOTION_EDIT_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} ${LIBRARIES} nlopt)
@@ -84,6 +96,10 @@ TARGET_LINK_LIBRARIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} ${LIBRARIES})
 ADD_LIBRARY(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} SHARED ${SMOOTH_MOTION_EDIT_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} ${LIBRARIES})
 TARGET_INCLUDE_DIRECTORIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${BSPLINE_LIB})
+
+SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
+SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_CONTACT_RAYTRACE_CONTEXT})
+SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
 SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
 SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_FUSED_MOTION_EDIT_CONTEXT})
@@ -98,6 +114,9 @@ SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES OUTPUT_N
 SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
 IF(WIN32)
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES SUFFIX ".mll")
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
+
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 
@@ -107,6 +126,9 @@ IF(WIN32)
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 ELSEIF(APPLE)
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES SUFFIX ".bundle")
+
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".bundle")
 
@@ -116,6 +138,8 @@ ELSEIF(APPLE)
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
 ELSE() # Linux
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES PREFIX "")
+    
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
 
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
