--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,16 @@ SET(CONTACT_RAYTRACE_CONTEXT_FILES
     "src/contactRaytraceContext/contactRaytracerMain.cpp"
 )
 
+SET(CONTACT_TRANSFER_EDIT_CONTEXT_FILES
+    "src/contactTransferEditContext/contactTransferEditContext.hpp"
+    "src/contactTransferEditContext/contactTransferEditContext.cpp"
+    "src/contactTransferEditContext/contactTransferEditContextCommand.hpp"
+    "src/contactTransferEditContext/contactTransferEditContextCommand.cpp"
+    "src/contactTransferEditContext/contactTransferEditorMain.cpp"
+    "src/contactTransferEditContext/geometryProcessingContext.hpp"
+    "src/contactTransferEditContext/geometryProcessingContext.cpp"
+)
+
 SET(FUSED_MOTION_EDIT_CONTEXT_FILES
     "src/fusedMotionEditContext/fusedMotionEditContext.hpp"
     "src/fusedMotionEditContext/fusedMotionEditContext.cpp"
@@ -80,12 +90,16 @@ SET(SMOOTH_MOTION_EDIT_CONTEXT_FILES
 )
 
 SET(_PROJECT_CONTACT_RAYTRACE_CONTEXT ${PROJECT_NAME}-contactRaytraceContext)
+SET(_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT ${PROJECT_NAME}-contactTransferEditContext)
 SET(_PROJECT_FUSED_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-fusedMotionEditContext)
 SET(_PROJECT_MARKER_CALIBRATION_CONTEXT ${PROJECT_NAME}-markerCalibrationContext)
 SET(_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-smoothMotionEditContext)
 
 ADD_LIBRARY(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} SHARED ${CONTACT_RAYTRACE_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} ${LIBRARIES} geometry-central)
+
+ADD_LIBRARY(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} SHARED ${CONTACT_TRANSFER_EDIT_CONTEXT_FILES})
+TARGET_LINK_LIBRARIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} ${LIBRARIES} geometry-central)
 
 ADD_LIBRARY(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} SHARED ${FUSED_MOTION_EDIT_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} ${LIBRARIES} nlopt)
@@ -100,6 +114,10 @@ TARGET_INCLUDE_DIRECTORIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PRIVATE ${CMAK
 SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
 SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_CONTACT_RAYTRACE_CONTEXT})
 SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+
+SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
+SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT})
+SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
 SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
 SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_FUSED_MOTION_EDIT_CONTEXT})
@@ -117,6 +135,9 @@ IF(WIN32)
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
+
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 
@@ -129,6 +150,9 @@ ELSEIF(APPLE)
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES SUFFIX ".bundle")
 
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
+
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".bundle")
 
@@ -139,6 +163,8 @@ ELSEIF(APPLE)
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
 ELSE() # Linux
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES PREFIX "")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES PREFIX "")
     
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
 
