GRAB motion sequence IO

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,14 @@ SET(FUSED_MOTION_EDIT_CONTEXT_FILES
     "src/fusedMotionEditContext/fusedMotionEditorMain.cpp"
 )
 
+SET(GRAB_MOTION_SEQUENCE_IO_FILES
+    "src/GRABMotionSequenceIO/cnpy.h"
+    "src/GRABMotionSequenceIO/cnpy.cpp"
+    "src/GRABMotionSequenceIO/GRABMotionSequenceIO.hpp"
+    "src/GRABMotionSequenceIO/GRABMotionSequenceIO.cpp"
+    "src/GRABMotionSequenceIO/GRABMotionSequenceIOMain.cpp"
+)
+
 SET(MARKER_CALIBRATION_CONTEXT_FILES
     "src/markerCalibrationContext/markerCalibrationContext.hpp"
     "src/markerCalibrationContext/markerCalibrationContext.cpp"
@@ -92,6 +100,7 @@ SET(SMOOTH_MOTION_EDIT_CONTEXT_FILES
 SET(_PROJECT_CONTACT_RAYTRACE_CONTEXT ${PROJECT_NAME}-contactRaytraceContext)
 SET(_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT ${PROJECT_NAME}-contactTransferEditContext)
 SET(_PROJECT_FUSED_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-fusedMotionEditContext)
+SET(_PROJECT_GRAB_MOTION_SEQUENCE_IO ${PROJECT_NAME}-GRABMotionSequenceIO)
 SET(_PROJECT_MARKER_CALIBRATION_CONTEXT ${PROJECT_NAME}-markerCalibrationContext)
 SET(_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-smoothMotionEditContext)
 
@@ -103,6 +112,9 @@ TARGET_LINK_LIBRARIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} ${LIBRARIES} geo
 
 ADD_LIBRARY(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} SHARED ${FUSED_MOTION_EDIT_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} ${LIBRARIES} nlopt)
+
+ADD_LIBRARY(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} SHARED ${GRAB_MOTION_SEQUENCE_IO_FILES})
+TARGET_LINK_LIBRARIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} ${LIBRARIES} ${ZLIB_LIBRARIES})
 
 ADD_LIBRARY(${_PROJECT_MARKER_CALIBRATION_CONTEXT} SHARED ${MARKER_CALIBRATION_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} ${LIBRARIES})
@@ -123,6 +135,10 @@ SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES COMPILE_D
 SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_FUSED_MOTION_EDIT_CONTEXT})
 SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
+SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
+SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES OUTPUT_NAME ${_PROJECT_GRAB_MOTION_SEQUENCE_IO})
+SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_MARKER_CALIBRATION_CONTEXT})
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
@@ -141,6 +157,9 @@ IF(WIN32)
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 
+    SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES SUFFIX ".mll")
+    SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
+
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 
@@ -153,11 +172,14 @@ ELSEIF(APPLE)
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
 
-    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
-    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".bundle")
-
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES SUFFIX ".bundle")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".bundle")
 
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
@@ -165,10 +187,12 @@ ELSE() # Linux
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES PREFIX "")
 
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES PREFIX "")
-    
-    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
 
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES PREFIX "")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
 
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
 ENDIF()
