Add contact sequence IO

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,13 @@ SET(CONTACT_RAYTRACE_CONTEXT_FILES
     "src/contactRaytraceContext/contactRaytracerMain.cpp"
 )
 
+SET(CONTACT_SEQUENCE_IO_FILES
+    ${JSON}
+    "src/contactSequenceIO/contactSequenceIO.hpp"
+    "src/contactSequenceIO/contactSequenceIO.cpp"
+    "src/contactSequenceIO/contactSequenceIOMain.cpp"
+)
+
 SET(CONTACT_TRANSFER_EDIT_CONTEXT_FILES
     "src/contactTransferEditContext/contactTransferEditContext.hpp"
     "src/contactTransferEditContext/contactTransferEditContext.cpp"
@@ -98,6 +105,7 @@ SET(SMOOTH_MOTION_EDIT_CONTEXT_FILES
 )
 
 SET(_PROJECT_CONTACT_RAYTRACE_CONTEXT ${PROJECT_NAME}-contactRaytraceContext)
+SET(_PROJECT_CONTACT_SEQUENCE_IO ${PROJECT_NAME}-contactSequenceIO)
 SET(_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT ${PROJECT_NAME}-contactTransferEditContext)
 SET(_PROJECT_FUSED_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-fusedMotionEditContext)
 SET(_PROJECT_GRAB_MOTION_SEQUENCE_IO ${PROJECT_NAME}-GRABMotionSequenceIO)
@@ -106,6 +114,10 @@ SET(_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-smoothMotionEditContext)
 
 ADD_LIBRARY(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} SHARED ${CONTACT_RAYTRACE_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} ${LIBRARIES} geometry-central)
+
+ADD_LIBRARY(${_PROJECT_CONTACT_SEQUENCE_IO} SHARED ${CONTACT_SEQUENCE_IO_FILES})
+TARGET_LINK_LIBRARIES(${_PROJECT_CONTACT_SEQUENCE_IO} ${LIBRARIES})
+TARGET_INCLUDE_DIRECTORIES(${_PROJECT_CONTACT_SEQUENCE_IO} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${JSON_LIB})
 
 ADD_LIBRARY(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} SHARED ${CONTACT_TRANSFER_EDIT_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} ${LIBRARIES} geometry-central)
@@ -126,6 +138,10 @@ TARGET_INCLUDE_DIRECTORIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PRIVATE ${CMAK
 SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
 SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_CONTACT_RAYTRACE_CONTEXT})
 SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+
+SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_SEQUENCE_IO} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
+SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_SEQUENCE_IO} PROPERTIES OUTPUT_NAME ${_PROJECT_CONTACT_SEQUENCE_IO})
+SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_SEQUENCE_IO} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
 SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
 SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT})
@@ -151,6 +167,9 @@ IF(WIN32)
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_SEQUENCE_IO} PROPERTIES SUFFIX ".mll")
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_SEQUENCE_IO} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
+
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 
@@ -169,6 +188,9 @@ ELSEIF(APPLE)
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES SUFFIX ".bundle")
 
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_SEQUENCE_IO} PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_SEQUENCE_IO} PROPERTIES SUFFIX ".bundle")
+
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
 
@@ -185,6 +207,8 @@ ELSEIF(APPLE)
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
 ELSE() # Linux
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES PREFIX "")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_SEQUENCE_IO} PROPERTIES PREFIX "")
 
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT} PROPERTIES PREFIX "")
 
