Keyframe motion sequence I/O

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,13 @@ SET(GRAB_MOTION_SEQUENCE_IO_FILES
     "src/GRABMotionSequenceIO/GRABMotionSequenceIOMain.cpp"
 )
 
+SET(KEYFRAME_MOTION_SEQUENCE_IO_FILES
+    ${JSON}
+    "src/keyframeMotionSequenceIO/keyframeMotionSequenceIO.hpp"
+    "src/keyframeMotionSequenceIO/keyframeMotionSequenceIO.cpp"
+    "src/keyframeMotionSequenceIO/keyframeMotionSequenceIOMain.cpp"
+)
+
 SET(MARKER_CALIBRATION_CONTEXT_FILES
     "src/markerCalibrationContext/markerCalibrationContext.hpp"
     "src/markerCalibrationContext/markerCalibrationContext.cpp"
@@ -109,6 +116,7 @@ SET(_PROJECT_CONTACT_SEQUENCE_IO ${PROJECT_NAME}-contactSequenceIO)
 SET(_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT ${PROJECT_NAME}-contactTransferEditContext)
 SET(_PROJECT_FUSED_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-fusedMotionEditContext)
 SET(_PROJECT_GRAB_MOTION_SEQUENCE_IO ${PROJECT_NAME}-GRABMotionSequenceIO)
+SET(_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO ${PROJECT_NAME}-keyframeMotionSequenceIO)
 SET(_PROJECT_MARKER_CALIBRATION_CONTEXT ${PROJECT_NAME}-markerCalibrationContext)
 SET(_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-smoothMotionEditContext)
 
@@ -127,6 +135,10 @@ TARGET_LINK_LIBRARIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} ${LIBRARIES} nlopt)
 
 ADD_LIBRARY(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} SHARED ${GRAB_MOTION_SEQUENCE_IO_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} ${LIBRARIES} ${ZLIB_LIBRARIES})
+
+ADD_LIBRARY(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} SHARED ${KEYFRAME_MOTION_SEQUENCE_IO_FILES})
+TARGET_LINK_LIBRARIES(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} ${LIBRARIES})
+TARGET_INCLUDE_DIRECTORIES(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${JSON_LIB})
 
 ADD_LIBRARY(${_PROJECT_MARKER_CALIBRATION_CONTEXT} SHARED ${MARKER_CALIBRATION_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} ${LIBRARIES})
@@ -155,6 +167,10 @@ SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES COMPILE_DEF
 SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES OUTPUT_NAME ${_PROJECT_GRAB_MOTION_SEQUENCE_IO})
 SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
+SET_TARGET_PROPERTIES(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
+SET_TARGET_PROPERTIES(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} PROPERTIES OUTPUT_NAME ${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO})
+SET_TARGET_PROPERTIES(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_MARKER_CALIBRATION_CONTEXT})
 SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
@@ -179,6 +195,9 @@ IF(WIN32)
     SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 
+    SET_TARGET_PROPERTIES(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} PROPERTIES SUFFIX ".mll")
+    SET_TARGET_PROPERTIES(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
+
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 
@@ -200,6 +219,9 @@ ELSEIF(APPLE)
     SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES SUFFIX ".bundle")
 
+    SET_TARGET_PROPERTIES(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} PROPERTIES SUFFIX ".bundle")
+
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".bundle")
 
@@ -215,6 +237,8 @@ ELSE() # Linux
     SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
 
     SET_TARGET_PROPERTIES(${_PROJECT_GRAB_MOTION_SEQUENCE_IO} PROPERTIES PREFIX "")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO} PROPERTIES PREFIX "")
 
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
 
