Virtual marker IO code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,14 @@ SET(SMOOTH_MOTION_EDIT_CONTEXT_FILES
     "src/smoothMotionEditContext/smoothMotionEditorMain.cpp"
 )
 
+SET(VIRTUAL_MARKER_IO_FILES
+    ${JSON}
+    "src/virtualMarkerIO/virtualMarkerIO.hpp"
+    "src/virtualMarkerIO/virtualMarkerIO.cpp"
+    "src/virtualMarkerIO/virtualMarkerIOMain.cpp"
+)
+
+
 SET(_PROJECT_CONTACT_RAYTRACE_CONTEXT ${PROJECT_NAME}-contactRaytraceContext)
 SET(_PROJECT_CONTACT_SEQUENCE_IO ${PROJECT_NAME}-contactSequenceIO)
 SET(_PROJECT_CONTACT_TRANSFER_EDIT_CONTEXT ${PROJECT_NAME}-contactTransferEditContext)
@@ -119,6 +127,7 @@ SET(_PROJECT_GRAB_MOTION_SEQUENCE_IO ${PROJECT_NAME}-GRABMotionSequenceIO)
 SET(_PROJECT_KEYFRAME_MOTION_SEQUENCE_IO ${PROJECT_NAME}-keyframeMotionSequenceIO)
 SET(_PROJECT_MARKER_CALIBRATION_CONTEXT ${PROJECT_NAME}-markerCalibrationContext)
 SET(_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-smoothMotionEditContext)
+SET(_PROJECT_VIRTUAL_MARKER_IO ${PROJECT_NAME}-virtualMarkerIO)
 
 ADD_LIBRARY(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} SHARED ${CONTACT_RAYTRACE_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} ${LIBRARIES} geometry-central)
@@ -146,6 +155,10 @@ TARGET_LINK_LIBRARIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} ${LIBRARIES})
 ADD_LIBRARY(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} SHARED ${SMOOTH_MOTION_EDIT_CONTEXT_FILES})
 TARGET_LINK_LIBRARIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} ${LIBRARIES})
 TARGET_INCLUDE_DIRECTORIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${BSPLINE_LIB})
+
+ADD_LIBRARY(${_PROJECT_VIRTUAL_MARKER_IO} SHARED ${VIRTUAL_MARKER_IO_FILES})
+TARGET_LINK_LIBRARIES(${_PROJECT_VIRTUAL_MARKER_IO} ${LIBRARIES})
+TARGET_INCLUDE_DIRECTORIES(${_PROJECT_VIRTUAL_MARKER_IO} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${JSON_LIB})
 
 SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
 SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_CONTACT_RAYTRACE_CONTEXT})
@@ -179,6 +192,10 @@ SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES COMPILE_
 SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT})
 SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
+SET_TARGET_PROPERTIES(${_PROJECT_VIRTUAL_MARKER_IO} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
+SET_TARGET_PROPERTIES(${_PROJECT_VIRTUAL_MARKER_IO} PROPERTIES OUTPUT_NAME ${_PROJECT_VIRTUAL_MARKER_IO})
+SET_TARGET_PROPERTIES(${_PROJECT_VIRTUAL_MARKER_IO} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+
 IF(WIN32)
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
@@ -203,6 +220,9 @@ IF(WIN32)
 
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_VIRTUAL_MARKER_IO} PROPERTIES SUFFIX ".mll")
+    SET_TARGET_PROPERTIES(${_PROJECT_VIRTUAL_MARKER_IO} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
 ELSEIF(APPLE)
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES SUFFIX ".bundle")
@@ -227,6 +247,9 @@ ELSEIF(APPLE)
 
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_VIRTUAL_MARKER_IO} PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(${_PROJECT_VIRTUAL_MARKER_IO} PROPERTIES SUFFIX ".bundle")
 ELSE() # Linux
     SET_TARGET_PROPERTIES(${_PROJECT_CONTACT_RAYTRACE_CONTEXT} PROPERTIES PREFIX "")
 
@@ -243,4 +266,6 @@ ELSE() # Linux
     SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
 
     SET_TARGET_PROPERTIES(${_PROJECT_SMOOTH_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
+
+    SET_TARGET_PROPERTIES(${_PROJECT_VIRTUAL_MARKER_IO} PROPERTIES PREFIX "")
 ENDIF()
