--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "deps/fcpw"]
 	path = deps/fcpw
 	url = https://github.com/lakshmipathyarjun6/fcpw
+[submodule "deps/rapidjson"]
+	path = deps/rapidjson
+	url = https://github.com/lakshmipathyarjun6/rapidjson.git
